Bug 195022 - Workaround fix for scaling images with a 1-bit mask. r=sfraser,sr=tor